name:                loop-lang
version:             1.0.0.0
synopsis:            The LOOP programming langague
description:         This package provides an interpreter for a simple Loop language with support for non-determinism.
homepage:            https://github.com/mischel/loop-lang#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Schaper
maintainer:          michael.schaper@uibk.ac.at
copyright:           Copyright: (c) 2017 Michael Schaper
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Loop
  build-depends:       base >= 4.7 && < 5, containers
  default-language:    Haskell2010
  ghc-options:         -Wall
  other-extensions:    FlexibleInstances

source-repository head
  type:     git
  location: https://github.com/mischel/loop-lang

